--- a/index.html
+++ b/index.html
@@ -227,4 +227,22 @@
     
 </body>
 </html>
+<div class="faq-section">
+        <h3 class="faq" style="color: white;">FAQ's</h3>
+        <ul>
+            <li>
+                <strong> 1. How do I enroll in a course?</strong>
+                <p>You can enroll in a course through the "Courses" section after logging into your account.</p>
+            </li>
+            <li>
+                <strong>2. How can I track my academic progress?</strong>
+                <p>Visit the "Academic Progress" page to view and manage your grades, completed courses, and goals.</p>
+            </li>
+            <li>
+                <strong>3. Who do I contact for technical support?</strong>
+                <p>You can reach out to our support team via the "Contact" page for any technical assistance.</p>
+                <p >Army Institute of Technology , Pune </p>
+            </li>
+        </ul>
+    </div>
 
