--- a/progress.html
+++ b/progress.html
@@ -32,6 +32,13 @@
                 </ul>
                 <button id="add-grade-btn">Add Grade</button>
             </div>
+            <div class="progress-container">
+        <div class="progress-bar" id="myBar">0%</div>
+    </div>
+
+    <button onclick="move()">Start Progress</button>
+
+    <script src="script.js"></script>
             <div id="courses-completed">
                 <h3>Completed Courses</h3>
                 <ul id="courses-completed-list">
